# comfyui-storyboard-suite

./: .gitignore  CURSOR-PLAN.md  LICENSE  PUBLISHING.md  README.md  README.ru.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
assets/: README.md
example_workflows/: Storyboard Suite — contact sheet.json  Storyboard Suite — prompt library + frame grid.json
web/: storyboard.css
web/js/: cells_widget.js  frame_grid_widget.js  shared.js  storyboard_suite.js  text_table_widget.js
