[project]
name = "comfyui-storyboard-suite"
description = "Storyboard Suite — pre-production ноды для ComfyUI: таблица промптов и сетка кадров. Карта-ассет канала @itsmyshnikov"
version = "0.2.4"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Smyshnikof/comfyui-storyboard-suite"

[tool.comfy]
PublisherId = "smyshnikof"
DisplayName = "Storyboard Suite"
Icon = "https://raw.githubusercontent.com/Smyshnikof/comfyui-storyboard-suite/main/icon.png"
